fix(modal): z-index bug with signup button

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -12,7 +12,6 @@
     filter: blur(50px);
   }
   &__cta {
-    z-index: 10;
     grid-area: cta;
   }
 
